--- a/projeto-lincoln/index.html
+++ b/projeto-lincoln/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Lincoln Berto</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 <body>
     
