--- a/projeto-lincoln/index.html
+++ b/projeto-lincoln/index.html
@@ -7,6 +7,21 @@
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    
+    <!-- <header>
+        <h1>Lincoln Berto</h1>
+        <p>Descomplicando a Tecnologia.</p>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer> -->
+    <div class="primeira box">
+        <h1>Lincoln Berto</h1>
+        <p>Descomplicando a Tecnologia.</p>
+    </div>
+    <div class="segunda box"></div>
+    <div class="terceira box"></div>
 </body>
 </html>
