--- a/projeto-lincoln/index.html
+++ b/projeto-lincoln/index.html
@@ -7,21 +7,18 @@
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <!-- <header>
+    <header class="top-container">
+        <img class="clique-mouse one-mouse" src="./img/Black White Square Interior Designer Logo.png" alt="imagem de mão de clique">
         <h1>Lincoln Berto</h1>
         <p>Descomplicando a Tecnologia.</p>
+        <img class="clique-mouse two-mouse" src="./img/Black White Square Interior Designer Logo.png" alt="imagem de mão de clique">
+        <img src="./img/programador.png" alt="programador com vários icones em volta">
     </header>
     <main>
 
     </main>
     <footer>
 
-    </footer> -->
-    <div class="primeira box">
-        <h1>Lincoln Berto</h1>
-        <p>Descomplicando a Tecnologia.</p>
-    </div>
-    <div class="segunda box"></div>
-    <div class="terceira box"></div>
+    </footer>
 </body>
 </html>
