adicionando modificações no header

--- a/projeto-lincoln/index.html
+++ b/projeto-lincoln/index.html
@@ -17,11 +17,71 @@
         <img class="clique-mouse two-mouse" src="./img/Black White Square Interior Designer Logo.png" alt="imagem de mão de clique">
         <img src="./img/programador.png" alt="programador com vários icones em volta">
     </header>
-    <main>
 
+    <main>
+        <div class="profile">
+            <figure>
+                <img src="./img/img-perfil.jpeg" alt="Foto do Lincoln">
+                <figcaption>
+                    <p>
+                        Professor e Pesquisador Universitário <br>
+                        Department of <a href="http://www.cs.cornell.edu">Computer Science</a> <br>
+                        Department of <a href="http://www.infosci.cornell.edu">Information Science</a><br>
+                        <a href="http://usf.edu.br">Universidade São Francisco</a><br>
+                        Itaiba, 2024
+                    </p>
+                </figcaption>
+            </figure>
+        </div>
+
+        <hr>
+
+        <div class="skills">
+            <h2>Minhas Habilidades</h2>
+            <figure class="skill-row">
+                <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExN3hmcXo5Z2tncTF3cjRjenNxZDVmdXdud3VtaXU4Mm41MW4wY3oyNiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/137EaR4vAOCn1S/giphy.gif" alt="Um GIF programando muito">
+                <figcaption>
+                    <p>HTML5 e CSS</p>
+                    <p>⭐⭐⭐⭐⭐</p>
+                </figcaption>
+            </figure>
+
+            <figure class="skill-row">
+                <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExaWZydHpxbDk3a3k2aTBjcG43aWRpYnlhbXdscGI2bnMxMmFpOXE2eiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/sE1fbQPozKg3q5I2W2/giphy.gif" alt="Um GIF de um grato gritando muito">
+                <figcaption>
+                    <p>JavaScript</p>
+                    <p>⭐⭐⭐</p>
+                </figcaption>
+            </figure>
+
+            <figure class="skill-row">
+                <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExeWVvOHpvMnNsbTN5MWNjNTFwa2ZoeDZsYzNwaTJheHc2N3Bld2VxbSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/H7CKd1GO6oiZQo7L5d/giphy.gif" alt="Um GIF de um grato gritando muito">
+                <figcaption>
+                    <p>UI Desing</p>
+                    <p>⭐</p>
+                </figcaption>
+            </figure>
+        </div>
+
+        <hr>
+
+        <div class="mais-sobre-mim">
+            <p>
+                Olá, sou Lincoln, um indivíduo apaixonado pela inovação e pelo avanço tecnológico. Meu percurso acadêmico floresceu no MIT (Instituto de Tecnologia de Massachusetts), uma das universidades mais renomadas do mundo na área de tecnologia. Fui privilegiado em me formar com excelência nesta instituição de prestígio. Impulsionado por uma insaciável sede de conhecimento, prossegui para conquistar tanto um mestrado quanto um doutorado, especializando-me em algoritmos e redes. Ao longo da minha jornada, tive o privilégio de ser reconhecido com diversos prêmios, refletindo meu compromisso e dedicação à pesquisa.
+                <br>
+                <br>
+                Além disso, conquistei o apoio de gigantes da indústria tecnológica, como Google, Facebook, Yahoo, e outras empresas de renome. Essas parcerias não apenas validam o valor das minhas pesquisas, mas também ampliam o alcance e a aplicabilidade do meu trabalho, impulsionando-me em direção ao meu objetivo de tornar-me um pesquisador reconhecido internacionalmente. Busco não apenas o reconhecimento, mas também o impacto positivo e a inspiração para as gerações futuras, através das minhas descobertas e contribuições.
+            </p>
+        </div>
     </main>
-    <footer>
-        
-    </footer>
+
+    <footer class="bottom-container">
+        <a class="footer-link" href="https://www.youtube.com/">Youtube</a>
+       <a class="footer-link" href="https://www.lincolnberto.com.br">Site</a>
+       <a class="footer-link" href="https://www.instragram.com/eilincoln">Instagram</a>
+       <p class="copyright">© 2024 Lincoln Berto @ BertoCodes.</p>
+   </footer>
+
+
 </body>
 </html>
