--- a/projeto-lincoln/index.html
+++ b/projeto-lincoln/index.html
@@ -9,20 +9,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sacramento&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="color: #40514E;">
     <header class="top-container">
-        <img class="clique-mouse one-mouse" src="./img/Black White Square Interior Designer Logo.png" alt="imagem de mão de clique">
         <h1>Lincoln Berto</h1>
         <p>Descomplicando a Tecnologia.</p>
-        <img class="clique-mouse two-mouse" src="./img/Black White Square Interior Designer Logo.png" alt="imagem de mão de clique">
-        <img src="./img/programador.png" alt="programador com vários icones em volta">
+        <img class="img-banner" src="./img/programador.png" alt="programador com vários icones em volta">
     </header>
 
-    <main>
+    <main class="middle-container">
         <div class="profile">
             <figure>
                 <img src="./img/img-perfil.jpeg" alt="Foto do Lincoln">
                 <figcaption>
+                    <h3>O que eu faço?</h3>
                     <p>
                         Professor e Pesquisador Universitário <br>
                         Department of <a href="http://www.cs.cornell.edu">Computer Science</a> <br>
@@ -37,7 +36,7 @@
         <hr>
 
         <div class="skills">
-            <h2>Minhas Habilidades</h2>
+            <h3>Minhas Habilidades</h3>
             <figure class="skill-row">
                 <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExN3hmcXo5Z2tncTF3cjRjenNxZDVmdXdud3VtaXU4Mm41MW4wY3oyNiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/137EaR4vAOCn1S/giphy.gif" alt="Um GIF programando muito">
                 <figcaption>
@@ -66,6 +65,7 @@
         <hr>
 
         <div class="mais-sobre-mim">
+            <h3>Um pouco mais sobre mim!</h3>
             <p>
                 Olá, sou Lincoln, um indivíduo apaixonado pela inovação e pelo avanço tecnológico. Meu percurso acadêmico floresceu no MIT (Instituto de Tecnologia de Massachusetts), uma das universidades mais renomadas do mundo na área de tecnologia. Fui privilegiado em me formar com excelência nesta instituição de prestígio. Impulsionado por uma insaciável sede de conhecimento, prossegui para conquistar tanto um mestrado quanto um doutorado, especializando-me em algoritmos e redes. Ao longo da minha jornada, tive o privilégio de ser reconhecido com diversos prêmios, refletindo meu compromisso e dedicação à pesquisa.
                 <br>
@@ -73,6 +73,17 @@
                 Além disso, conquistei o apoio de gigantes da indústria tecnológica, como Google, Facebook, Yahoo, e outras empresas de renome. Essas parcerias não apenas validam o valor das minhas pesquisas, mas também ampliam o alcance e a aplicabilidade do meu trabalho, impulsionando-me em direção ao meu objetivo de tornar-me um pesquisador reconhecido internacionalmente. Busco não apenas o reconhecimento, mas também o impacto positivo e a inspiração para as gerações futuras, através das minhas descobertas e contribuições.
             </p>
         </div>
+
+        <hr>
+
+        <div class="contact-me">
+            <h3>Entre em Contato</h3>
+            <h2>Esarei a sua disposição para lhe melhor atender.</h2>
+            <p>Mande sua mensagem relatando o que você deseja que no máximo 48h irei lhe responder!</p>
+            <a class="btn" href="mailto:lincoln.santospro@mail.com">Entre em contato</a>
+        </div>
+
+        <hr>
     </main>
 
     <footer class="bottom-container">
