--- a/appdukeza/index.html
+++ b/appdukeza/index.html
@@ -1,19 +1,142 @@
 <!doctype html>
 <html lang="py-br">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <title>App Dukeza</title>
-  </head>
-  <body>
-    <h1 class="bg-primary">Olá Lincoln!</h1>
+</head>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-  </body>
+<body>
+    <header id="title">
+        <!-- navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">BertoCodes</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link">
+                            Home
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">
+                            Produto
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">
+                            Sobre
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">
+                            Blog
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <!-- Title -->
+
+        <div>
+            <h1>aaaaaaaaaaaaaaaaaaaaa</h1>
+            <button type="button">ok</button>
+            <button type="button">ok</button>
+        </div>
+
+        <figure>
+            <img src="./img/Gatinho.png" alt="Gatinho feliz">
+        </figure>
+    </header>
+
+    <section id="features">
+        <h3>Lorem ipsum dolor</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus suscipit quae itaque sequi neque perferendis,
+            iure, magni, sunt deleniti cupiditate nesciunt assumenda veniam eius praesentium pariatur dicta quibusdam
+            libero
+            fugiat.</p>
+
+        <h3>Lorem ipsum dolor</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus suscipit quae itaque sequi neque perferendis,
+            iure, magni, sunt deleniti cupiditate nesciunt assumenda veniam eius praesentium pariatur dicta quibusdam
+            libero
+            fugiat.</p>
+
+        <h3>Lorem ipsum dolor</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus suscipit quae itaque sequi neque perferendis,
+            iure, magni, sunt deleniti cupiditate nesciunt assumenda veniam eius praesentium pariatur dicta quibusdam
+            libero
+            fugiat.</p>
+    </section>
+
+    <section id="testimonials">
+        <h2>aaaaaaaaaaaaaaaaaaaaaaa</h2>
+        <img src="./img/Alisson.png" alt="Alisson">
+        <em>Itatiba, São Paulo</em>
+    </section>
+
+    <section id="press">
+        <img src="img/1.png" alt="Logo1">
+        <img src="img/2.png" alt="Logo2">
+        <img src="img/3.png" alt="Logo3">
+        <img src="img/4.png" alt="Logo4">
+    </section>
+
+    <section id="pricing">
+        <h2>Lorem ipsum dolor</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+        <h3>aaaaaaaaaaaaaaaaa</h3>
+        <h2>Grátis</h2>
+        <p>aaaaaaaaaaaaaaaaa</p>
+        <p>aaaaaaaaaaaaa</p>
+        <p>aaaaaaaaaa</p>
+        <button type="button">inscreva-se</button>
+
+        <h3>aaaaaaaaaaaaaaaaa</h3>
+        <h2>Grátis</h2>
+        <p>aaaaaaaaaaaaaaaaa</p>
+        <p>aaaaaaaaaaaaa</p>
+        <p>aaaaaaaaaa</p>
+        <button type="button">inscreva-se</button>
+
+        <h3>aaaaaaaaaaaaaaaaa</h3>
+        <h2>Grátis</h2>
+        <p>aaaaaaaaaaaaaaaaa</p>
+        <p>aaaaaaaaaaaaa</p>
+        <p>aaaaaaaaaa</p>
+        <button type="button">inscreva-se</button>
+    </section>
+    
+    <section id="cta">
+        <h3>Faça agora mesmo o download</h3>
+        <button type="button">Download</button>
+        <button type="button">Download</button>
+    </section>
+
+    <footer id="footer">
+        <p>© Copyright 2024 AppGatos</p>
+    </footer>
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+</body>
 </html>
