--- a/appdukeza/exercicios.html
+++ b/appdukeza/exercicios.html
@@ -6,25 +6,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-    <div class="row">
-        <div class="col-lg-2 col-md-3 bg-primary">
-            <p>Coluna 1</p>
-        </div>
-        <div class="col-lg-2 col-md-3 bg-secondary">
-            <p>Coluna 2</p>
-        </div>
-        <div class="col-lg-2 col-md-3 bg-success">
-            <p>Coluna 3</p>
-        </div>
-        <div class="col-lg-2 col-md-3 bg-danger">
-            <p>Coluna 4</p>
-        </div>
-        <div class="col-lg-2 col-md-3 bg-warning">
-            <p>Coluna 5</p>
-        </div>
-        <div class="col-lg-2 col-md-3 bg-dark">
-            <p>Coluna 6</p>
-        </div>
+    <div class="container" style="background-color: red;">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda voluptatem quaerat ducimus expedita pariatur? Hic commodi illum perferendis suscipit vel, similique accusamus pariatur est sed architecto explicabo, voluptatum ut optio?
     </div>
 </body>
 </html>
