--- a/appdukeza/index.html
+++ b/appdukeza/index.html
@@ -4,18 +4,28 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
+    <!-- Link direto para o CSS -->
+    <link rel="stylesheet" href="./css/styles.css">
+
+    <!-- Font Icones -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <title>App Dukeza</title>
 </head>
 
 <body>
-    <header id="title">
-        <!-- navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <header class="header-title">
+        <div class="container-fluid">
+            <!-- navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="#">BertoCodes</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
                 aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,35 +60,45 @@
 
         <!-- Title -->
 
-        <div>
-            <h1>aaaaaaaaaaaaaaaaaaaaa</h1>
-            <button type="button">ok</button>
-            <button type="button">ok</button>
+        <div class="row">
+            <div class="col-lg-6">
+                <h1>Encontre agora mesmo um gatinho para ser seu melhor amigo.</h1>
+                <button class="button-apple btn-lg btn-dark" type="button"><i class="fa-brands fa-apple"> Download</i></button>
+                <button class="button-andoid btn-lg btn btn-outline-light" type="button"><i class="fa-brands fa-google-play"> Download</i></button>
+            </div>
+    
+            <figure class="col-lg-6">
+                <img class="title-image" src="./img/Gatinho.png" alt="Gatinho feliz">
+            </figure>
         </div>
-
-        <figure>
-            <img src="./img/Gatinho.png" alt="Gatinho feliz">
-        </figure>
+        </div>
     </header>
 
     <section id="features">
-        <h3>Lorem ipsum dolor</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus suscipit quae itaque sequi neque perferendis,
-            iure, magni, sunt deleniti cupiditate nesciunt assumenda veniam eius praesentium pariatur dicta quibusdam
-            libero
-            fugiat.</p>
-
-        <h3>Lorem ipsum dolor</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus suscipit quae itaque sequi neque perferendis,
-            iure, magni, sunt deleniti cupiditate nesciunt assumenda veniam eius praesentium pariatur dicta quibusdam
-            libero
-            fugiat.</p>
-
-        <h3>Lorem ipsum dolor</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus suscipit quae itaque sequi neque perferendis,
-            iure, magni, sunt deleniti cupiditate nesciunt assumenda veniam eius praesentium pariatur dicta quibusdam
-            libero
-            fugiat.</p>
+        <div class="container-fluid row">
+            <div class="features-item col-lg-4">
+                <i class="fa-solid fa-circle-check"></i>
+                <h3>Fácil de usar</h3>
+                <p>
+                    Tão fácil de usar que até seu cachorro poderia fazer esse app.
+                </p>
+            </div>
+            <div class="features-item col-lg-4">
+                <i class="fa-solid fa-bullseye"></i>
+                <h3>Os melhores Gatos</h3>
+                <p>
+                    Temos os melhores gatinhos para você.
+                </p>
+            </div>
+            <div class="features-item col-lg-4">
+                <i class="fa-solid fa-heart"></i>
+                <h3>Gatinhos</h3>
+                <p>
+                    Encontre o melhor gatinho para você.
+                </p>
+            </div>
+        </div>
+        
     </section>
 
     <section id="testimonials">
