adicionando componente no appdukeza com feauteres

--- a/appdukeza/index.html
+++ b/appdukeza/index.html
@@ -77,21 +77,21 @@
     <section id="features">
         <div class="container-fluid row">
             <div class="features-item col-lg-4">
-                <i class="fa-solid fa-circle-check"></i>
+                <i class="icon fa-solid fa-circle-check fa-4x"></i>
                 <h3>Fácil de usar</h3>
                 <p>
                     Tão fácil de usar que até seu cachorro poderia fazer esse app.
                 </p>
             </div>
             <div class="features-item col-lg-4">
-                <i class="fa-solid fa-bullseye"></i>
+                <i class="icon fa-solid fa-bullseye fa-4x"></i>
                 <h3>Os melhores Gatos</h3>
                 <p>
                     Temos os melhores gatinhos para você.
                 </p>
             </div>
             <div class="features-item col-lg-4">
-                <i class="fa-solid fa-heart"></i>
+                <i class=" icon fa-solid fa-heart fa-4x"></i>
                 <h3>Gatinhos</h3>
                 <p>
                     Encontre o melhor gatinho para você.
