alteração no z-index da imagem do header

--- a/appdukeza/index.html
+++ b/appdukeza/index.html
@@ -67,7 +67,7 @@
                 <button class="button-andoid btn-lg btn btn-outline-light" type="button"><i class="fa-brands fa-google-play"> Download</i></button>
             </div>
     
-            <figure class="col-lg-6">
+            <figure class="figuer-title-image col-lg-6">
                 <img class="title-image" src="./img/Gatinho.png" alt="Gatinho feliz">
             </figure>
         </div>
