--- a/appdukeza/exercicios.html
+++ b/appdukeza/exercicios.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container" style="background-color: red;">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda voluptatem quaerat ducimus expedita pariatur? Hic commodi illum perferendis suscipit vel, similique accusamus pariatur est sed architecto explicabo, voluptatum ut optio?
-    </div>
+
+
+
+
+
+    
 </body>
 </html>
