atualizações no app

--- a/appdukeza/index.html
+++ b/appdukeza/index.html
@@ -61,7 +61,7 @@
         <!-- Title -->
 
         <div class="row">
-            <div class="col-lg-6">
+            <div class="row-direita col-lg-6">
                 <h1>Encontre agora mesmo um gatinho para ser seu melhor amigo.</h1>
                 <button class="button-apple btn-lg btn-dark" type="button"><i class="fa-brands fa-apple"> Download</i></button>
                 <button class="button-andoid btn-lg btn btn-outline-light" type="button"><i class="fa-brands fa-google-play"> Download</i></button>
