adicionando alterações na sessão CTA

--- a/appdukeza/index.html
+++ b/appdukeza/index.html
@@ -188,9 +188,13 @@
     </section>
     
     <section id="cta">
-        <h3>Faça agora mesmo o download</h3>
-        <button type="button">Download</button>
-        <button type="button">Download</button>
+        <h3 class="cta-heading">Faça agora mesmo o download</h3>
+        <button class="button-apple btn-lg btn-dark" type="button">
+            <i class="fa-brands fa-apple"> Download</i>
+        </button>
+        <button class="button-andoid btn-lg btn btn-outline-light" type="button">
+            <i class="fa-brands fa-google-play"> Download</i>
+        </button>
     </section>
 
     <footer id="footer">
