adicionando atualização do footer

--- a/appdukeza/index.html
+++ b/appdukeza/index.html
@@ -198,6 +198,10 @@
     </section>
 
     <footer id="footer">
+        <i class="footer-icon fa-brands fa-square-x-twitter"></i>
+        <i class="footer-icon fa-brands fa-facebook"></i>
+        <i class="footer-icon fa-brands fa-instagram"></i>
+        <i class="footer-icon fa-brands fa-pinterest"></i>
         <p>© Copyright 2024 AppGatos</p>
     </footer>
 
