--- a/appdukeza/index.html
+++ b/appdukeza/index.html
@@ -35,23 +35,18 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link">
-                            Home
+                        <a class="nav-link" href="#footer">
+                            Contato
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">
-                            Produto
+                        <a class="nav-link" href="#pricing">
+                            Plano
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">
-                            Sobre
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link">
-                            Blog
+                        <a class="nav-link" href="#cta">
+                            Download
                         </a>
                     </li>
                 </ul>
