finalização da aula sobre o querrySelector

--- a/DOM/aula-03/index.html
+++ b/DOM/aula-03/index.html
@@ -18,7 +18,7 @@
             <a href="https://lincolnberto.com"> BertoCodes </a>
         </li>
         <li>Segundo</li>
-        <li>Terceira</li>
+        <li class="terceira">Terceira</li>
     </ul>
     <script src="./script.js"></script>
 </body>
