--- a/projetos/gameDice/index.html
+++ b/projetos/gameDice/index.html
@@ -9,7 +9,23 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Jogo de Dados</h1>
+    <main>
+        <h1>Atualizar</h1>
+
+        <div class="dice">
+            <h2>Jogador 1</h2>
+            <img src="./img/dice1.png" alt="Dado 1">
+        </div>
+
+        <div class="dice">
+            <h2>Jogador 2</h2>
+            <img src="./img/dice1.png" alt="Dado 1">
+        </div>
+    </main>
+
+    <footer>
+        <p>www.lincolnberto.com</p>
+    </footer>
 
     <script src="./index.js"></script>
 </body>
