modificações no CSS

--- a/projetos/gameDice/index.html
+++ b/projetos/gameDice/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <main>
+    <main class="container">
         <h1>Atualizar</h1>
 
         <div class="dice">
@@ -24,7 +24,7 @@
     </main>
 
     <footer>
-        <p>www.lincolnberto.com</p>
+        <p>www🎲lincolnberto🎲com</p>
     </footer>
 
     <script src="./index.js"></script>
