adicionando projeto de dados

--- a/projetos/gameDice/index.html
+++ b/projetos/gameDice/index.html
@@ -14,12 +14,12 @@
 
         <div class="dice">
             <h2>Jogador 1</h2>
-            <img src="./img/dice1.png" alt="Dado 1">
+            <img src="" alt="Dado 1">
         </div>
 
         <div class="dice">
             <h2>Jogador 2</h2>
-            <img src="./img/dice1.png" alt="Dado 1">
+            <img class="img2" src="" alt="Dado 1">
         </div>
     </main>
 
