--- a/projetos/cores-css/index.html
+++ b/projetos/cores-css/index.html
@@ -3,11 +3,26 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Bootstrap demo</title>
+    <title>Qual a cor CSS?</title>
+    <!-- link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
+    <header class="d-flex justify-content-around">
+        <h2>Cores</h2>
+        <nav class="navbar">
+            <ul class="nav">
+                <li>
+                    <a class="nav-link" href="index.html">Nomes</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#">Hex</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
     <h1>Hello, world!</h1>
 
 
