--- a/projetos/cores-css/index.html
+++ b/projetos/cores-css/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Qual a cor CSS?</title>
+    <link rel="stylesheet" href="./style.css">
     <!-- link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -23,10 +24,14 @@
         </nav>
     </header>
 
-    <h1>Hello, world!</h1>
-
-
-
+    <main class="container">
+        <section class="d-flex justify-content-center section">
+            <div  class="m-auto">
+                <h2>Backhround Color: <span class="span-color">#red</span> </h2>
+                <button id="btn" class="btn btn-danger">Mudar de cor</button>
+            </div>
+        </section>
+    </main>
 
     <script src="./app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
