--- a/projetos/cores-css/hexa.html
+++ b/projetos/cores-css/hexa.html
@@ -27,12 +27,13 @@
     <main id="main-color" class="container">
         <section class="d-flex justify-content-center section">
             <div  class="m-auto">
-                <h2>Backhround Color: <span class="span-color">#red</span> </h2>
+                <h2>Backhround Color: <span class="span-color">#FFFFFF</span> </h2>
                 <button id="btn" class="btn btn-danger">Mudar de cor</button>
             </div>
         </section>
     </main>
 
+    <script src="hexa.js"></script>
     <script src="./app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
