--- a/projetos/gameFlappyBird/index.html
+++ b/projetos/gameFlappyBird/index.html
@@ -9,7 +9,7 @@
     <h1>Flappy Bird</h1>
     <main tp-flappy>
         <!-- Jogo -->
-        <img class="passaro" src="./imagens/passaro.png" alt="passaro">
+        <!-- <img class="passaro" src="./imagens/passaro.png" alt="passaro">
 
         <div class="par-de-barreiras">
             <div class="barreira">
@@ -22,8 +22,7 @@
                 <div class="corpo"></div>
             </div>
         </div>
-        
-        <div class="progresso">100</div>
+        <div class="progresso">100</div> -->
     </main>
     <script src="js/flappy.js"></script>
 </body>
